--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -30,8 +30,8 @@
         </li>
         <li><a href="#education">Освіта</a>
         </li>
-        <li><a href="#additional education">Додаткова освіта та сертифікати</a></li>
-        <li><a href="#language knowledge">Знання мов</a></li>
+        <li><a href="#additional_education">Додаткова освіта та сертифікати</a></li>
+        <li><a href="#language_knowledge">Знання мов</a></li>
       </ul>
     </div>
   </header>
@@ -134,14 +134,14 @@
     <p>Товарознавство та комерційна діяльність, Ірпінь, Незакінчена вища, <br>з 2008 по
       2012 (3 роки 8 місяців)</p>
     <!-- Додаткова освіта та сертифікати -->
-    <h5 id="additional education">Додаткова освіта та сертифікати</h5>
+    <h5 id="additional_education">Додаткова освіта та сертифікати</h5>
     <p>
       IT-курси : FRONT-END (HTML/CSS + JS) Education
       Platform : <a target="_blank" href="https://lemon.school">" Lemon School "</a>
       2022, 4 місяці
       IT-курси : FRONT-
     </p>
-    <h6 id="language knowledge">
+    <h6 id="language_knowledge">
       <mark>Знання мов</mark>
     </h6>
     <ul>
