--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -85,7 +85,7 @@
     </ul>
     <img title="BSG World" src="/img/job_2.jpeg" alt="BSG World">
     <!-- №3 -->
-    <h3>Експерт по роботі з корпоративними клієнтами</h3>
+    <h3>Керівник відділу по роботі з корпоративними клієнтами</h3>
     <h4><a target="_blank" href="https://www.lifecell.ua">LifeCell</a>, <span>Київ (Телекомунікації, зв'язок)</span>,
       <br>з
       09.2015 по
@@ -106,7 +106,7 @@
     </ul>
     <img title="LifeCell" src="/img/job_3.png" alt="LifeCell">
     <!-- №4 -->
-    <h3>Менеджер з продажу телекомунікаційних послуг</h3>
+    <h3>Керівник відділу продажів</h3>
     <h4>«Українські новітні технології» TM Freshtel 4G Internet, Киев (Телекомунікації,
       зв'язок), <br>з 08.2010 по 08.2015 (5 років)</h4>
     <ul>
