--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -14,7 +14,7 @@
       <h1>Андрієнко Андрій <br>
         Вадимович</h1>
     </div>
-    <div class="photo"><img title="Photo" src="/img/photo_1.jpg" alt="Photo" width="450"></div>
+    <div class="photo"><img title="Photo" src="img/photo_1.jpg" alt="Photo" width="450"></div>
     <h2>
       Експерт з продажу /
       надання
@@ -64,7 +64,7 @@
       <li>узгодження кращих пропозицій та цін для замовників,</li>
       <li>контроль балансів.</li>
     </ul>
-    <img title="INTELCO" src="/img/job_1.png" alt="INTELCO" width="450">
+    <img title="INTELCO" src="img/job_1.png" alt="INTELCO" width="450">
     <!-- №2 -->
     <h3>Менеджер відділу продажів</h3>
     <h4><a target="_blank" href="https://bsg.world/">BSG World</a>, <span>Київ (Телекомунікації, зв'язок)</span>, <br>з
@@ -83,7 +83,7 @@
       <li>узгодження кращих пропозицій та цін для замовників,</li>
       <li>контроль балансів.</li>
     </ul>
-    <img title="BSG World" src="/img/job_2.jpeg" alt="BSG World">
+    <img title="BSG World" src="img/job_2.jpeg" alt="BSG World">
     <!-- №3 -->
     <h3>Керівник відділу по роботі з корпоративними клієнтами</h3>
     <h4><a target="_blank" href="https://www.lifecell.ua">LifeCell</a>, <span>Київ (Телекомунікації, зв'язок)</span>,
@@ -104,7 +104,7 @@
       <li>узгодження кращих пропозицій та цін для замовників,</li>
       <li>контроль балансів.</li>
     </ul>
-    <img title="LifeCell" src="/img/job_3.png" alt="LifeCell">
+    <img title="LifeCell" src="img/job_3.png" alt="LifeCell">
     <!-- №4 -->
     <h3>Керівник відділу продажів</h3>
     <h4>«Українські новітні технології» TM Freshtel 4G Internet, Киев (Телекомунікації,
@@ -122,7 +122,7 @@
       <li>узгодження кращих пропозицій та цін для замовників,</li>
       <li>контроль балансів.</li>
     </ul>
-    <img title="Freshtel 4G" src="/img/job_4.png" alt="Freshtel 4G">
+    <img title="Freshtel 4G" src="img/job_4.png" alt="Freshtel 4G">
     <!-- Навчання -->
     <h2 id="education"><mark>Освіта</mark></h2>
     <h3>
