--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -152,9 +152,9 @@
     </ul>
   </main>
   <footer>
-    <p><mark><a target="_blank" href="/contacts.html">Some Interesting Page</a></mark></p>
+    <p><a target="_blank" href="/contacts.html">Some Interesting Page</a></p>
     <p>
-      <mark><a href="/index.html">Головна Сторінка></a></mark>
+      <a href="/index.html">Головна Сторінка></a>
     </p>
   </footer>
 </body>
