--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -152,7 +152,9 @@
     </ul>
   </main>
   <footer>
-    <p><a target="_blank" href="/contacts.html">Some Interesting Page</a></p>
+    <p>
+      <a target="_blank" href="/contacts.html">Some Interesting Page</a>
+    </p>
     <p>
       <a href="/index.html">Головна Сторінка></a>
     </p>
