--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -156,7 +156,7 @@
       <a target="_blank" href="/contacts.html">Some Interesting Page</a>
     </p>
     <p>
-      <a href="/index.html">Головна Сторінка></a>
+      <a href="/index.html">Головна Сторінка </a>
     </p>
   </footer>
 </body>
