--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -153,10 +153,10 @@
   </main>
   <footer>
     <p>
-      <a target="_blank" href="/contacts.html">Some Interesting Page</a>
+      <a target="_blank" href="contacts.html">Some Interesting Page</a>
     </p>
     <p>
-      <a href="/index.html">Головна Сторінка </a>
+      <a href="index.html">Головна Сторінка </a>
     </p>
   </footer>
 </body>
