--- a/lesson_2/contacts.html
+++ b/lesson_2/contacts.html
@@ -11,7 +11,7 @@
     <header></header>
     <main>
         <H1>Some Page</H1>
-        <a href="index.html">Головна Сторінка</a>
+        <a href="/index.html">Головна Сторінка</a>
     </main>
     <footer></footer>
 </body>
