--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -40,6 +40,8 @@
     <h2 id="contacts"><mark>Контактна інформація</mark></h2>
     <ul>
       <li>моб.тел: <a href="tel:+38067-880-80-10">+38(067)-880-80-10</a></li>
+      <li>моб.тел: <a href="tel:+38063-880-80-10">+38(063)-880-80-10</a></li>
+      <li>роб.тел: <a href="tel:+38067-885-05-85">+38(067)-885-05-85</a></li>
       <li>e-mail: <a href="mailto:andrienko.a.v@ukr.net">andrienko.a.v@ukr.net</a></li>
       <li>
         <a target="_blank" href="https://www.facebook.com/a.andrienko.official">Facebook</a>
