--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -87,7 +87,7 @@
     </ul>
     <img title="BSG World" src="img/job_2.jpeg" alt="BSG World">
     <!-- №3 -->
-    <h3>Керівник відділу по роботі з корпоративними клієнтами</h3>
+    <h3>Керівник дилерського відділу по роботі з корпоративними клієнтами</h3>
     <h4><a target="_blank" href="https://www.lifecell.ua">LifeCell</a>, <span>Київ (Телекомунікації, зв'язок)</span>,
       <br>з
       09.2015 по
