--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -85,7 +85,7 @@
       <li>узгодження кращих пропозицій та цін для замовників,</li>
       <li>контроль балансів.</li>
     </ul>
-    <img title="BSG World" src="img/job_2.jpeg" alt="BSG World">
+    <img title="Global Communication Platform : BSG World" src="img/job_2.jpeg" alt="Global Communication Platform : BSG World">
     <!-- №3 -->
     <h3>Керівник дилерського відділу по роботі з корпоративними клієнтами</h3>
     <h4><a target="_blank" href="https://www.lifecell.ua">LifeCell</a>, <span>Київ (Телекомунікації, зв'язок)</span>,
