--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -69,7 +69,7 @@
     <img title="INTELCO" src="img/job_1.png" alt="INTELCO" width="450">
     <!-- №2 -->
     <h3>Менеджер відділу продажів</h3>
-    <h4><a target="_blank" href="https://bsg.world/">BSG World</a>, <span>Київ (Телекомунікації, зв'язок)</span>, <br>з
+    <h4><a target="_blank" href="https://bsg.world/">Global Communication Platform : BSG World</a>, <span>Київ (Телекомунікації, зв'язок)</span>, <br>з
       05.2016 по
       02.2017 (9 місяців)</h4>
     <ul>
@@ -85,7 +85,7 @@
       <li>узгодження кращих пропозицій та цін для замовників,</li>
       <li>контроль балансів.</li>
     </ul>
-    <img title="Global Communication Platform : BSG World" src="img/job_2.jpeg" alt="Global Communication Platform : BSG World">
+    <img title="BSG World" src="img/job_2.jpeg" alt="BSG World">
     <!-- №3 -->
     <h3>Керівник дилерського відділу по роботі з корпоративними клієнтами</h3>
     <h4><a target="_blank" href="https://www.lifecell.ua">LifeCell</a>, <span>Київ (Телекомунікації, зв'язок)</span>,
